--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.67.8
+ * style.css v6.67.9
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -151,7 +151,7 @@ td {
   .flat-ul:after, .icon-list:after {
     clear: both; }
 
-.section-footer p, .read-older p {
+.section-footer p {
   -webkit-font-feature-settings: normal;
   font-feature-settings: normal;
   overflow: hidden;
@@ -159,7 +159,7 @@ td {
   white-space: nowrap; }
 
 @media (min-width: 53.487rem) {
-  figcaption, .section-footer, .post-list .date, .sidenote, .share-buttons ul {
+  figcaption, .section-footer, .post-list .date, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
@@ -192,7 +192,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .icon-list a, .read
       color: #1188bb; } }
 
 p, pre, ul,
-ol, dl, figure, table {
+ol, dl, figure, table, .searchbox {
   margin: 1.618rem 0 0; }
 
 h2 + p, h2 + pre, h2 + ul, h2 +
@@ -201,7 +201,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
 
 .site-search, .searchbox, figure, .global-header, .content, .content > article,
 .content > section,
-.content > [role="main"], .global-footer, .subcontent, .post-list li {
+.content > [role="main"], .global-footer, .subcontent, .post-list li, .read-older {
   position: relative; }
 
 .site-search .query, .searchbox .query {
@@ -684,23 +684,15 @@ th {
   color: #6a625e;
   display: block;
   font-size: 0.811rem;
-  line-height: 1; }
+  line-height: 1.294; }
 @media (min-width: 39.118rem) {
   .post-list .date {
     float: right;
-    line-height: 1.995; } }
+    font-size: 1rem;
+    line-height: 1.618; } }
 @media (min-width: 53.487rem) {
   .post-list .date {
-    float: none;
-    overflow-x: hidden;
-    white-space: nowrap; }
-    .post-list .date::after {
-      border-top: 0.063rem dotted #cac5be;
-      content: '';
-      display: inline-block;
-      height: 0.218rem;
-      margin-left: 1.618rem;
-      width: 100%; } }
+    float: none; } }
 
 .pull-quote {
   color: #6a625e;
@@ -739,6 +731,12 @@ th {
   font-size: 1.618rem;
   line-height: 1.294;
   margin-top: 0; }
+@media (min-width: 53.487rem) {
+  .read-older a::before {
+    line-height: 2.094;
+    margin-top: 0; }
+  .read-older p {
+    margin-top: 4.236rem; } }
 
 .searchbox {
   max-width: 22.249rem; }
@@ -820,6 +818,9 @@ img[src$='.svg'], img[src$='.svgz'] {
 
 html {
   -ms-overflow-style: -ms-autohiding-scrollbar; }
+
+pre {
+  padding-bottom: 1px; }
 
 @media print {
   * {
