--- a/styles/debug.css
+++ b/styles/debug.css
@@ -7,10 +7,6 @@
 @font-face {
   font-family: 'Emoji';
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
-@media (min-width: 39.118rem) {
-  /*! Applied wider than 39.118rem */ }
-@media (min-width: 53.487rem) {
-  /*! Applied wider than 53.487rem */ }
 .colors {
   zoom: 1; }
   .colors:before, .colors:after {
@@ -74,7 +70,7 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Source Sans Pro", "Emoji", sans-serif; }
+  font-family: "Eau Douce", "Emoji", sans-serif; }
 
 .italic {
   font-style: italic; }
