--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.67.9
+ * style.css v6.68.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -129,10 +129,6 @@ td {
 @font-face {
   font-family: 'Emoji';
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
-@media (min-width: 39.118rem) {
-  /*! Applied wider than 39.118rem */ }
-@media (min-width: 53.487rem) {
-  /*! Applied wider than 53.487rem */ }
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
   margin-right: auto;
@@ -219,7 +215,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
   direction: ltr;
   text-indent: -9999px;
   background-color: transparent;
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%231188bb%22%2F%3E%3C%2Fsvg%3E");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -239,7 +235,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Source Sans Pro", "Emoji", sans-serif;
+  font-family: "Eau Douce", "Emoji", sans-serif;
   line-height: 1.618; }
 
 h1 {
@@ -358,7 +354,7 @@ em {
   font-weight: bolder; }
 
 strong {
-  color: #ff3b0c;
+  color: #ef2e00;
   font-weight: bolder; }
 
 cite {
@@ -659,19 +655,12 @@ th {
   .icon-list a {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    background-color: #5bacd0;
     border-radius: 0.25rem;
     display: block;
     height: 3.246rem;
     padding: 25%;
     width: 3.246rem; }
-    .icon-list a[href^='https://twitter.com/'] {
-      background-color: #00acee; }
-    .icon-list a[href^='https://www.facebook.com/'] {
-      background-color: #3b5998; }
-    .icon-list a[href$='.tumblr.com/'] {
-      background-color: #34526f; }
-    .icon-list a[type='application/rss+xml'] {
-      background-color: #ee802f; }
   .icon-list img {
     vertical-align: text-bottom; }
 
