--- a/styles/documents.css
+++ b/styles/documents.css
@@ -4,8 +4,6 @@
  *
  * LICENSE: http://hail2u.mit-license.org/2011
  */
-@import url(/fonts/source-sans-pro.css);
-@import url(/fonts/source-code-pro.css);
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -341,7 +339,7 @@ table {
 body {
   background-color: #fcfcfc;
   color: #333;
-  font: 1em/1.75 "Source Sans Pro", "Helvetica Neue", "Calibri", sans-serif;
+  font: 1em/1.75 "Helvetica Neue", "Calibri", sans-serif;
   margin: 2em 1em; }
   @media (min-width: 28em) {
     body {
@@ -372,7 +370,7 @@ hr {
 
 pre {
   background-color: #f4f4f4;
-  font: 0.875em/1.25 "Source Code Pro", "Menlo", "Consolas", monospace;
+  font: 0.875em/1.25 "Menlo", "Consolas", monospace;
   margin: 2em 0 0;
   padding: 1em; }
 
@@ -421,7 +419,7 @@ acronym {
 code,
 var,
 samp {
-  font-family: "Source Code Pro", "Menlo", "Consolas", monospace; }
+  font-family: "Menlo", "Consolas", monospace; }
 
 ins {
   border-bottom: 3px double #595959;
