--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.2
+ * style.css v6.68.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -525,11 +525,13 @@ th {
   margin-top: 6.854rem;
   padding-left: 0; }
 .footlinks li {
-  display: table-cell; }
+  display: table-cell;
+  padding-right: 0.809rem; }
   .footlinks li::after {
-    content: '\a0\a0'; }
+    content: ''; }
   .footlinks li:first-child::after {
-    content: ' ·\a0'; }
+    content: '·';
+    margin-left: 0.809rem; }
 @media (min-width: 53.487rem) {
   .footlinks ul {
     margin-top: 6.854rem; } }
@@ -655,14 +657,12 @@ th {
   .icon-list a {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #5bacd0;
-    border-radius: 0.25rem;
+    border: 0.25rem solid;
+    border-radius: 51%;
     display: block;
     height: 3.246rem;
-    padding: 25%;
+    padding: 17.5%;
     width: 3.246rem; }
-  .icon-list img {
-    vertical-align: text-bottom; }
 
 .post-list ol {
   padding-left: 0; }
