--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.7
+ * style.css v6.68.8
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -652,10 +652,12 @@ th {
     padding-left: 0.809rem;
     padding-right: 0.809rem; }
   .icon-list a {
+    background-color: #5bacd0;
+    border-radius: 0.25rem;
     box-sizing: border-box;
     display: block;
     height: 3.246rem;
-    padding: 25%;
+    padding: 19.098%;
     width: 3.246rem; }
 
 .post-list ol {
