--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.9
+ * style.css v6.68.10
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -569,10 +569,6 @@ th {
     .site-search {
       bottom: 3.958rem; } }
 
-.ads {
-  margin-left: -0.809rem;
-  margin-right: -0.809rem; }
-
 .circular {
   border-radius: 51%; }
 
@@ -783,15 +779,7 @@ th {
     top: auto; } }
 
 .adsbygoogle {
-  height: 250px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1.618rem;
-  overflow: hidden;
-  width: 300px; }
-  @media (min-width: 352px) {
-    .adsbygoogle {
-      margin-left: 0.809rem; } }
+  margin-top: 1.618rem; }
 
 img[src$='.svg'], img[src$='.svgz'] {
   width: 100%; }
