--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.10
+ * style.css v6.68.11
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -779,7 +779,8 @@ th {
     top: auto; } }
 
 .adsbygoogle {
-  margin-top: 1.618rem; }
+  margin-top: 1.618rem;
+  max-width: 336px; }
 
 img[src$='.svg'], img[src$='.svgz'] {
   width: 100%; }
