--- a/styles/documents.css
+++ b/styles/documents.css
@@ -493,7 +493,7 @@ th {
   white-space: nowrap; }
 
 .note {
-  border-left: 3px double #f00;
+  border-left: 3px double #c33;
   padding-left: 1em; }
 
 .image {
@@ -538,10 +538,10 @@ th {
     max-width: none; } }
 @media print {
   * {
-    background-color: transparent !important;
-    background-image: none !important;
+    border-color: black !important;
     box-shadow: none !important;
-    color: #000 !important;
+    color: black !important;
+    background: transparent !important;
     text-shadow: none !important; }
 
   body {
@@ -555,7 +555,7 @@ th {
   hr,
   ins,
   strong {
-    border-color: #000; }
+    border-color: currentColor; }
 
   pre,
   code,
