--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.11
+ * style.css v6.68.12
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -423,6 +423,7 @@ th {
   background-color: transparent;
   display: block;
   height: 4.87rem;
+  margin-top: 0;
   width: 3.01rem; }
   @media (min-width: 53.487rem) {
     .logo {
@@ -753,10 +754,16 @@ th {
   white-space: nowrap; }
 
 .share-buttons ul {
+  line-height: 2.124;
   padding-left: 0; }
+  .share-buttons ul::before {
+    content: "Share:";
+    display: table-cell;
+    font-weight: bold;
+    text-transform: uppercase; }
 .share-buttons li {
   display: table-cell;
-  padding-right: 0.809rem; }
+  padding-left: 0.809rem; }
 .share-buttons a {
   background-color: #5bacd0;
   border-radius: 0.25rem;
@@ -776,7 +783,12 @@ th {
 @media (min-width: 53.487rem) {
   .share-buttons ul {
     bottom: 0;
-    top: auto; } }
+    top: auto; }
+    .share-buttons ul::before {
+      display: block; }
+  .share-buttons li {
+    padding-left: 0;
+    padding-right: 0.809rem; } }
 
 .adsbygoogle {
   margin-top: 1.618rem;
@@ -839,7 +851,7 @@ pre {
     max-width: 36rem; }
 
   hr {
-    border-bottom: 1px dashed #000;
+    border-bottom: 1px dashed;
     height: 0;
     margin-bottom: 4.236rem;
     margin-top: 4.236rem;
