--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.12
+ * style.css v6.68.13
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -272,7 +272,7 @@ pre {
       word-wrap: break-word; } }
 
 blockquote {
-  border-left: 0.25rem solid #cac5be;
+  border-left: 0.25rem solid #e1ddd5;
   color: #6a625e;
   margin: 0;
   padding-left: 1.618rem; }
@@ -314,7 +314,7 @@ dd {
 figcaption {
   color: #6a625e; }
   blockquote + figcaption:last-child {
-    border-left: 0.25rem solid #cac5be;
+    border-left: 0.25rem solid #e1ddd5;
     color: #6a625e;
     padding-left: 1.618rem;
     padding-top: 0.618rem; }
@@ -413,6 +413,12 @@ td {
   padding: 0.5rem;
   vertical-align: top;
   white-space: nowrap; }
+  th:first-child,
+  td:first-child {
+    padding-left: 0; }
+  th:last-child,
+  td:last-child {
+    padding-right: 0; }
 
 th {
   text-align: left; }
@@ -476,7 +482,7 @@ th {
       margin-top: 0rem; } }
 
 .first-heading {
-  margin-top: 8.167rem; }
+  margin-top: 8.472rem; }
   [role="main"] > .first-heading {
     color: #6a625e;
     font-size: 2.124rem;
@@ -494,11 +500,11 @@ th {
 
 .section-footer {
   bottom: 100%;
+  color: #98928c;
   font-size: 0.811rem;
+  line-height: 1.995;
   position: absolute;
   width: 100%; }
-  .section-footer p {
-    color: #98928c; }
   .section-footer .date {
     color: #6a625e; }
   .section-footer .tag {
@@ -507,7 +513,7 @@ th {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
-        margin-top: 0.391rem; }
+        margin-top: 0.238rem; }
       [role="main"] > .section-footer {
         bottom: auto;
         top: auto; }
@@ -758,6 +764,7 @@ th {
   padding-left: 0; }
   .share-buttons ul::before {
     content: "Share:";
+    color: #534a47;
     display: table-cell;
     font-weight: bold;
     text-transform: uppercase; }
