Remove default implicit ARIA semantics

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -49,7 +49,7 @@
     {{> global-header}}
 
     <?$permalink::is_permalink eq="1"><div class="content"></?>
-    <?$permalink::is_permalink ne="1"><main class="content" role="main"></?>
+    <?$permalink::is_permalink ne="1"><main class="content"></?>
       <?$categories::enabled eq="1">
         <section class="post-list">
           <h1 class="first-heading">“$categories::title”についての記事</h1>
