--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -17,7 +17,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content" role="main">
+    <main class="content">
       <section id="website">
         <h1 class="first-heading">このウェブサイトについて</h1>
 
