--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -17,7 +17,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content" role="main">
+    <main class="content">
       <section id="by-category">
         <h1 class="first-heading">カテゴリ別</h1>
 
