--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.13
+ * style.css v6.68.14
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -263,6 +263,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
+  font-family: "Menlo", "Consolas", monospace;
   line-height: 1.294; }
   @media (min-width: 39.118rem) {
     pre {
@@ -363,17 +364,22 @@ abbr {
   cursor: help;
   letter-spacing: 0.063rem; }
 
-p code::before, p code::after, p
-var::before, p
-var::after, p
-samp::before, p
-samp::after, p
-kbd::before, p
-kbd::after {
-  content: ' ';
-  display: inline-block;
-  font-size: 0;
-  width: 0; }
+code,
+var,
+samp,
+kbd {
+  font-family: "Menlo", "Consolas", monospace; }
+  p code::before, p code::after, p
+  var::before, p
+  var::after, p
+  samp::before, p
+  samp::after, p
+  kbd::before, p
+  kbd::after {
+    content: ' ';
+    display: inline-block;
+    font-size: 0;
+    width: 0; }
 
 mark {
   background-color: #ffba0c;
@@ -832,6 +838,13 @@ pre {
 
   body {
     font-family: serif; }
+
+  pre,
+  code,
+  samp,
+  var,
+  kbd {
+    font-family: monospace; }
 
   h1,
   h2,
