--- a/styles/eau-douce.css
+++ b/styles/eau-douce.css
@@ -6,6 +6,11 @@
 @font-face {
   font-family: 'Eau Douce';
   font-style: normal;
+  font-weight: 100;
+  src: local("Eau Douce"), url("../fonts/eau-douce/xl.woff2") format("woff2"), url("../fonts/eau-douce/xl.woff") format("woff"); }
+@font-face {
+  font-family: 'Eau Douce';
+  font-style: normal;
   font-weight: 400;
   src: local("Eau Douce"), url("../fonts/eau-douce/r.woff2") format("woff2"), url("../fonts/eau-douce/r.woff") format("woff"); }
 @font-face {
