--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.16
+ * style.css v6.68.17
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -235,7 +235,10 @@ body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Eau Douce", "Emoji", sans-serif;
-  line-height: 1.618; }
+  line-height: 1.456; }
+  @media (min-width: 39.118rem) {
+    body {
+      line-height: 1.618; } }
 
 h1 {
   color: #6a625e;
