--- a/styles/eau-douce.css
+++ b/styles/eau-douce.css
@@ -7,7 +7,12 @@
   font-family: 'Eau Douce';
   font-style: normal;
   font-weight: 100;
-  src: local("Eau Douce"), url("../fonts/eau-douce/xl.woff2") format("woff2"), url("../fonts/eau-douce/xl.woff") format("woff"); }
+  src: local("Eau Douce Thin"), url("../fonts/eau-douce/t.woff2") format("woff2"), url("../fonts/eau-douce/t.woff") format("woff"); }
+@font-face {
+  font-family: 'Eau Douce';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Eau Douce Light"), url("../fonts/eau-douce/l.woff2") format("woff2"), url("../fonts/eau-douce/l.woff") format("woff"); }
 @font-face {
   font-family: 'Eau Douce';
   font-style: normal;
@@ -16,5 +21,15 @@
 @font-face {
   font-family: 'Eau Douce';
   font-style: normal;
+  font-weight: 500;
+  src: local("Eau Douce Medium"), url("../fonts/eau-douce/m.woff2") format("woff2"), url("../fonts/eau-douce/m.woff") format("woff"); }
+@font-face {
+  font-family: 'Eau Douce';
+  font-style: normal;
   font-weight: 700;
   src: local("Eau Douce Bold"), url("../fonts/eau-douce/b.woff2") format("woff2"), url("../fonts/eau-douce/b.woff") format("woff"); }
+@font-face {
+  font-family: 'Eau Douce';
+  font-style: normal;
+  font-weight: 900;
+  src: local("Eau Douce Heavy"), url("../fonts/eau-douce/bk.woff2") format("woff2"), url("../fonts/eau-douce/bk.woff") format("woff"); }
