--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.17
+ * style.css v6.68.18
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -470,7 +470,7 @@ th {
 .tagline {
   color: #6a625e;
   font-size: 2.124rem;
-  font-weight: 100;
+  font-weight: normal;
   margin-top: 2.618rem; }
   @media (min-width: 39.118rem) {
     .tagline {
