--- a/styles/debug.css
+++ b/styles/debug.css
@@ -72,6 +72,9 @@ body::after {
 .font-family-body {
   font-family: "Eau Douce", "Emoji", sans-serif; }
 
+.font-family-code {
+  font-family: "Menlo", "Consolas", "Emoji", monospace; }
+
 .italic {
   font-style: italic; }
 
