--- a/styles/style.css
+++ b/styles/style.css
@@ -659,7 +659,7 @@ th {
     padding-right: 0.809rem; }
   .icon-list a {
     background-color: #5bacd0;
-    border-radius: 0.25rem;
+    border-radius: 51%;
     box-sizing: border-box;
     display: block;
     height: 3.246rem;
@@ -776,7 +776,7 @@ th {
   padding-left: 0.809rem; }
 .share-buttons a {
   background-color: #5bacd0;
-  border-radius: 0.25rem;
+  border-radius: 51%;
   display: block;
   height: 2.124rem;
   width: 2.124rem; }
