--- a/styles/debug.css
+++ b/styles/debug.css
@@ -73,7 +73,7 @@ body::after {
   font-family: "Eau Douce", "Emoji", sans-serif; }
 
 .font-family-code {
-  font-family: "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "Fira Mono", "Emoji", monospace; }
 
 .italic {
   font-style: italic; }
