--- a/styles/debug.css
+++ b/styles/debug.css
@@ -70,10 +70,10 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Eau Douce", "Emoji", sans-serif; }
+  font-family: "Noto Sans CJK JP", "Emoji", sans-serif; }
 
 .font-family-code {
-  font-family: "Fira Mono", "Emoji", monospace; }
+  font-family: "Source Code Pro", "Emoji", monospace; }
 
 .italic {
   font-style: italic; }
