--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.23
+ * style.css v6.68.24
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -234,7 +234,7 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Eau Douce", "Emoji", sans-serif;
+  font-family: "Noto Sans CJK JP", "Emoji", sans-serif;
   line-height: 1.456; }
   @media (min-width: 39.118rem) {
     body {
@@ -266,7 +266,7 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
-  font-family: "Fira Mono", "Emoji", monospace;
+  font-family: "Source Code Pro", "Emoji", monospace;
   line-height: 1.294; }
   @media (min-width: 39.118rem) {
     pre {
@@ -371,7 +371,7 @@ code,
 var,
 samp,
 kbd {
-  font-family: "Fira Mono", "Emoji", monospace; }
+  font-family: "Source Code Pro", "Emoji", monospace; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
@@ -464,7 +464,7 @@ th {
 .tagline {
   color: #6a625e;
   font-size: 2.124rem;
-  font-weight: normal;
+  font-weight: 100;
   margin-top: 2.618rem; }
   @media (min-width: 39.118rem) {
     .tagline {
@@ -489,7 +489,7 @@ th {
   [role="main"] > .first-heading {
     color: #6a625e;
     font-size: 2.124rem;
-    font-weight: normal;
+    font-weight: 100;
     padding-bottom: 1.0rem; }
   @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
