--- a/styles/debug.css
+++ b/styles/debug.css
@@ -70,7 +70,7 @@ body::after {
   vertical-align: super; }
 
 .font-family-body {
-  font-family: "Noto Sans CJK JP", "Emoji", sans-serif; }
+  font-family: "Eau Douce", "Emoji", sans-serif; }
 
 .font-family-code {
   font-family: "Source Code Pro", "Emoji", monospace; }
