--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.24
+ * style.css v6.68.26
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -234,11 +234,11 @@ html {
 body {
   background-color: #fcf9f0;
   color: #3c3330;
-  font-family: "Noto Sans CJK JP", "Emoji", sans-serif;
+  font-family: "Eau Douce", "Emoji", sans-serif;
   line-height: 1.456; }
   @media (min-width: 39.118rem) {
     body {
-      line-height: 1.618; } }
+      line-height: 1.78; } }
 
 h1 {
   color: #6a625e;
@@ -464,7 +464,7 @@ th {
 .tagline {
   color: #6a625e;
   font-size: 2.124rem;
-  font-weight: 100;
+  font-weight: 400;
   margin-top: 2.618rem; }
   @media (min-width: 39.118rem) {
     .tagline {
@@ -489,7 +489,7 @@ th {
   [role="main"] > .first-heading {
     color: #6a625e;
     font-size: 2.124rem;
-    font-weight: 100;
+    font-weight: 400;
     padding-bottom: 1.0rem; }
   @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
@@ -733,13 +733,13 @@ th {
   color: #534a47;
   font-size: 1.313rem; }
   .seealso::before {
-    content: '📍 '; }
+    content: '🔗\FE0E '; }
 
 .seemore a {
   font-weight: bolder;
   text-transform: uppercase; }
   .seemore a::before {
-    content: '➔ '; }
+    content: '➔ \FE0E'; }
 
 .sidenote {
   color: #98928c;
@@ -752,7 +752,7 @@ th {
   color: inherit; }
 .topic .section-footer + p::after {
   color: #1188bb;
-  content: 'More ➟';
+  content: 'More ➟\FE0E';
   font-size: 0.811rem;
   font-weight: bolder;
   margin-left: 0.809rem;
