Include tag when listing weblog articles

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -51,8 +51,11 @@
             <ol>
         {{/isFirstInYear}}
 
-        <li><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></span>
-          <a href="{{link}}">{{{title}}}</a></li>
+        <li>
+          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
+            · <span class="tag"><a href="/blog/{{cat}}">{{category}}</a></span></div>
+          <a href="{{link}}">{{{title}}}</a>
+        </li>
 
         {{#isLastInYear}}
             </ol>
