--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -41,8 +41,11 @@
         <section id="recent-articles" class="post-list">
           <ol>
             {{#item}}
-              <li><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                <a href="{{link}}">{{{title}}}</a></li>
+              <li>
+                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
+                  · <span class="tag">{{category}}</span></div>
+                <a href="{{link}}">{{{title}}}</a>
+              </li>
             {{/item}}
           </ol>
 
@@ -58,8 +61,10 @@
         {{#updates}}
           <ol>
             {{#item}}
-              <li><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-                <a href="{{link}}">{{{title}}}</a></li>
+              <li>
+                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+                <a href="{{link}}">{{{title}}}</a>
+              </li>
             {{/item}}
           </ol>
         {{/updates}}
