--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.27
+ * style.css v6.68.28
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -155,7 +155,7 @@ td {
   white-space: nowrap; }
 
 @media (min-width: 53.487rem) {
-  figcaption, .section-footer, .post-list .date, .read-older a::before, .sidenote, .share-buttons ul {
+  figcaption, .section-footer, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
     margin-right: 1.618rem;
     position: absolute;
     right: 100%;
@@ -671,18 +671,21 @@ th {
 .post-list li {
   list-style-type: none;
   margin-top: 0.618rem; }
-.post-list .date {
-  color: #6a625e;
-  display: block;
+.post-list .info {
+  color: #98928c;
   font-size: 0.811rem;
   line-height: 1.294; }
+.post-list .date {
+  color: #6a625e; }
+.post-list .tag {
+  color: #6a625e; }
 @media (min-width: 39.118rem) {
-  .post-list .date {
+  .post-list .info {
     float: right;
     font-size: 1rem;
     line-height: 1.618; } }
 @media (min-width: 53.487rem) {
-  .post-list .date {
+  .post-list .info {
     float: none; } }
 
 .pull-quote {
