Update theme for weblog category page

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -122,5 +122,7 @@
 </a>
 
 <!-- blosxom categories_story -->
-            <li><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
-              <a href="$url$path/$fn.$default_flavour">$title</a></li>
+            <li>
+              <div class="info"><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time></div>
+              <a href="$url$path/$fn.$default_flavour">$title</a>
+            </li>
