--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.28
+ * style.css v6.68.29
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -254,13 +254,13 @@ hr {
   background-color: transparent;
   border: 0;
   clear: both;
-  height: 1.618rem;
+  height: 2.618rem;
   margin: 2.618rem auto;
-  width: 6.854rem; }
+  width: 11.09rem; }
   hr::before {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221024%22%20height%3D%221024%22%20viewBox%3D%220%200%201024%201024%22%3E%3Cpath%20d%3D%22M464%20320v108.863l-94.277-54.43-16%2027.712L496%20484.29V320zm63.998%200v164.29l142.28-82.145-16-27.713L560%20428.862V320zM337.723%20429.855l-16%2027.713L416.003%20512l-94.28%2054.432%2016%2027.713L480.003%20512c-47.43-27.375-94.85-54.773-142.28-82.145zm348.554%200L543.997%20512l142.278%2082.145c5.336-9.235%2010.67-18.476%2016.002-27.713L607.997%20512l94.28-54.432zM496%20539.71l-142.277%2082.145%2016%2027.713L464%20595.138V704h32zm31.998%200L528%20704h32l-.002-108.863%2094.28%2054.43%2016-27.712z%22%20fill%3D%22%23cac5be%22%2F%3E%3C%2Fsvg%3E");
     background-repeat: repeat-x;
-    background-size: 2.618rem 100%; }
+    background-size: 4.236rem 100%; }
 
 pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
@@ -715,7 +715,7 @@ th {
 
 .read-older a::before {
   color: #534a47;
-  content: '📓 Read older:';
+  content: '📓\FE0E\0020Read older:';
   display: block;
   font-weight: bolder;
   line-height: 1;
@@ -736,13 +736,13 @@ th {
   color: #534a47;
   font-size: 1.313rem; }
   .seealso::before {
-    content: '🔗\FE0E '; }
+    content: '🔗\FE0E\0020'; }
 
 .seemore a {
   font-weight: bolder;
   text-transform: uppercase; }
   .seemore a::before {
-    content: '➔ \FE0E'; }
+    content: '➔\FE0E\0020'; }
 
 .sidenote {
   color: #98928c;
@@ -767,7 +767,7 @@ th {
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
-    content: 'Share:';
+    content: '📣\FE0E\0020Share:';
     display: table-cell;
     font-weight: bold;
     text-transform: uppercase; }
