--- a/styles/documents.css
+++ b/styles/documents.css
@@ -513,7 +513,7 @@ th {
   font-size: 1.17em;
   font-weight: 700; }
   .seealso::before {
-    content: '🔗\FE0E '; }
+    content: '🔗\FE0E\0020'; }
   .seealso a {
     font-weight: 400; }
 
