--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -53,7 +53,7 @@
 
         <li>
           <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
-            · <span class="tag"><a href="/blog/{{cat}}">{{category}}</a></span></div>
+            · <span class="tag"><a href="/blog/{{cat}}/">{{category}}</a></span></div>
           <a href="{{link}}">{{{title}}}</a>
         </li>
 
