Change root element of "Post List"

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -45,10 +45,10 @@
 
       {{#articles}}
         {{#isFirstInYear}}
-          <section id="on-{{year}}" class="post-list">
+          <section id="on-{{year}}">
             <h1>{{year}}年の記事</h1>
 
-            <ol>
+            <ol class="post-list">
         {{/isFirstInYear}}
 
         <li>
