--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -51,14 +51,14 @@
     <?$permalink::is_permalink eq="1"><div class="content"></?>
     <?$permalink::is_permalink ne="1"><main class="content"></?>
       <?$categories::enabled eq="1">
-        <section class="post-list">
+        <section>
           <h1 class="first-heading">“$categories::title”についての記事</h1>
 
           <footer class="section-footer">
             <p>What I wrote about “$categories::title”</p>
           </footer>
 
-          <ol>
+          <ol class="post-list">
       </?>
 
 <!-- blosxom date -->
