--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -38,8 +38,8 @@
 
         {{> google-adsense__ad-main}}
 
-        <section id="recent-articles" class="post-list">
-          <ol>
+        <section id="recent-articles">
+          <ol class="post-list">
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
@@ -55,11 +55,11 @@
         </section>
       {{/articles}}
 
-      <section id="recent-updates" class="post-list">
+      <section id="recent-updates">
         <h1>お知らせ</h1>
 
         {{#updates}}
-          <ol>
+          <ol class="post-list">
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
