--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.29
+ * style.css v6.68.31
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -55,7 +55,7 @@ audio:not([controls]) {
 
 /*
  * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
  */
 [hidden],
 template {
@@ -164,6 +164,7 @@ td {
     z-index: 1; } }
 
 h1, h2 {
+  font-weight: 400;
   line-height: 1.294; }
 
 hr, .share-buttons a {
@@ -241,13 +242,11 @@ body {
       line-height: 1.618; } }
 
 h1 {
-  color: #6a625e;
-  font-size: 1.618rem;
-  margin: 6.854rem 0 0; }
+  font-size: 2.124rem;
+  margin: 11.09rem 0 0; }
 
 h2 {
-  color: #534a47;
-  font-size: 1.313rem;
+  font-size: 1.618rem;
   margin: 4.236rem 0 0; }
 
 hr {
@@ -463,43 +462,42 @@ th {
 
 .tagline {
   color: #6a625e;
-  font-size: 2.124rem;
+  font-size: 2.618rem;
   font-weight: 400;
-  margin-top: 2.618rem; }
+  margin-top: 4.236rem; }
   @media (min-width: 39.118rem) {
     .tagline {
-      margin-top: 4.236rem; } }
+      margin-top: 6.854rem; } }
   @media (min-width: 53.487rem) {
     .tagline {
       margin-left: -14.369rem;
-      margin-top: 6.854rem;
+      margin-top: 11.09rem;
       max-width: 50.369rem; } }
 
 .content {
-  margin-top: -4.236rem; }
+  margin-top: -6.854rem; }
   @media (min-width: 39.118rem) {
     .content {
-      margin-top: -2.618rem; } }
+      margin-top: -4.236rem; } }
   @media (min-width: 53.487rem) {
     .content {
       margin-top: 0rem; } }
 
 .first-heading {
-  margin-top: 8.472rem; }
+  margin-top: 12.708rem; }
   [role="main"] > .first-heading {
     color: #6a625e;
-    font-size: 2.124rem;
-    font-weight: 400;
-    padding-bottom: 1.0rem; }
+    font-size: 2.618rem;
+    padding-bottom: 2.618rem; }
   @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
-      padding-bottom: 2.618rem; } }
+      padding-bottom: 5.236rem; } }
   @media (min-width: 53.487rem) {
     .first-heading {
-      margin-top: 6.854rem; }
+      margin-top: 11.09rem; }
       [role="main"] > .first-heading {
         margin-left: -14.369rem;
-        padding-bottom: 5.236rem; } }
+        padding-bottom: 9.472rem; } }
 
 .section-footer {
   bottom: 100%;
@@ -516,7 +514,7 @@ th {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
-        margin-top: 0.238rem; }
+        margin-top: 0.565rem; }
       [role="main"] > .section-footer {
         bottom: auto;
         top: auto; }
@@ -542,7 +540,7 @@ th {
     margin-left: 0.809rem; }
 @media (min-width: 53.487rem) {
   .footlinks ul {
-    margin-top: 6.854rem; } }
+    margin-top: 11.09rem; } }
 
 .byline {
   color: #6a625e; }
@@ -666,27 +664,27 @@ th {
     padding: 19.098%;
     width: 3.246rem; }
 
-.post-list ol {
+.post-list {
   padding-left: 0; }
-.post-list li {
-  list-style-type: none;
-  margin-top: 0.618rem; }
-.post-list .info {
-  color: #98928c;
-  font-size: 0.811rem;
-  line-height: 1.294; }
-.post-list .date {
-  color: #6a625e; }
-.post-list .tag {
-  color: #6a625e; }
-@media (min-width: 39.118rem) {
+  .post-list li {
+    list-style-type: none;
+    margin-top: 0.618rem; }
   .post-list .info {
-    float: right;
-    font-size: 1rem;
-    line-height: 1.618; } }
-@media (min-width: 53.487rem) {
-  .post-list .info {
-    float: none; } }
+    color: #98928c;
+    font-size: 0.811rem;
+    line-height: 1.294; }
+  .post-list .date {
+    color: #6a625e; }
+  .post-list .tag {
+    color: #6a625e; }
+  @media (min-width: 39.118rem) {
+    .post-list .info {
+      float: right;
+      font-size: 1rem;
+      line-height: 1.618; } }
+  @media (min-width: 53.487rem) {
+    .post-list .info {
+      float: none; } }
 
 .pull-quote {
   color: #6a625e;
@@ -870,8 +868,8 @@ pre {
   hr {
     border-bottom: 1px dashed;
     height: 0;
-    margin-bottom: 4.236rem;
-    margin-top: 4.236rem;
+    margin-bottom: 2.618rem;
+    margin-top: 2.618rem;
     width: 61.804%; }
 
   pre {
@@ -899,4 +897,4 @@ pre {
     margin-top: 3.236rem; }
 
   .byline {
-    margin-top: 6.854rem; } }
+    margin-top: 4.236rem; } }
