--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -71,14 +71,14 @@
       </section>
 
       <section id="subscribe-links">
+        <h1>フォロー</h1>
+
         <ul class="icon-list">
           <li><a href="https://twitter.com/hail2unet" itemprop="sameAs"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
           <li><a href="https://www.facebook.com/hail2u.net" itemprop="sameAs"><img alt="Facebook" src="../../images/icon/facebook.min.svg"></a></li>
           <li><a href="http://u2liah.tumblr.com/" itemprop="sameAs"><img alt="Tumblr" src="../../images/icon/tumblr.min.svg"></a></li>
           <li><a href="/feed" rel="alternate" type="application/rss+xml"><img alt="Feed" src="../../images/icon/feed.min.svg"></a></li>
         </ul>
-
-        <p>このウェブサイトの更新情報は、これらソーシャル・ネットワークやRSSフィードで購読することが出来ます。お好きな方法でぜひ購読してみてください。</p>
       </section>
     </main>
 
