Use announce instead of update

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -57,7 +57,7 @@
         </section>
       {{/articles}}
 
-      <section id="recent-updates">
+      <section id="recent-announces">
         <h1>お知らせ</h1>
 
         {{#updates}}
