--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.31
+ * style.css v6.68.32
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -462,6 +462,7 @@ th {
 
 .tagline {
   color: #6a625e;
+  font-family: "Niconne", "Eau Douce", "Emoji", sans-serif;
   font-size: 2.618rem;
   font-weight: 400;
   margin-top: 4.236rem; }
@@ -840,6 +841,9 @@ pre {
   var,
   kbd {
     font-family: monospace; }
+
+  .tagline {
+    font-family: serif; }
 
   h1,
   h2,
