--- a/styles/debug.css
+++ b/styles/debug.css
@@ -6,6 +6,8 @@
  */
 @font-face {
   font-family: 'Emoji';
+  font-style: normal;
+  font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .colors {
   zoom: 1; }
