--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.68.32
+ * style.css v6.68.33
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -128,6 +128,8 @@ td {
 
 @font-face {
   font-family: 'Emoji';
+  font-style: normal;
+  font-weight: 400;
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
 .global-header, .content, .global-footer, .subcontent {
   margin-left: auto;
@@ -242,8 +244,11 @@ body {
       line-height: 1.618; } }
 
 h1 {
-  font-size: 2.124rem;
+  font-size: 1.618rem;
   margin: 11.09rem 0 0; }
+  @media (min-width: 39.118rem) {
+    h1 {
+      font-size: 2.124rem; } }
 
 h2 {
   font-size: 1.618rem;
@@ -463,14 +468,16 @@ th {
 .tagline {
   color: #6a625e;
   font-family: "Niconne", "Eau Douce", "Emoji", sans-serif;
-  font-size: 2.618rem;
+  font-size: 1.313rem;
   font-weight: 400;
   margin-top: 4.236rem; }
   @media (min-width: 39.118rem) {
     .tagline {
+      font-size: 2.124rem;
       margin-top: 6.854rem; } }
   @media (min-width: 53.487rem) {
     .tagline {
+      font-size: 2.618rem;
       margin-left: -14.369rem;
       margin-top: 11.09rem;
       max-width: 50.369rem; } }
@@ -488,15 +495,17 @@ th {
   margin-top: 12.708rem; }
   [role="main"] > .first-heading {
     color: #6a625e;
-    font-size: 2.618rem;
+    font-size: 1.313rem;
     padding-bottom: 2.618rem; }
   @media (min-width: 39.118rem) {
     [role="main"] > .first-heading {
+      font-size: 2.124rem;
       padding-bottom: 5.236rem; } }
   @media (min-width: 53.487rem) {
     .first-heading {
       margin-top: 11.09rem; }
       [role="main"] > .first-heading {
+        font-size: 2.618rem;
         margin-left: -14.369rem;
         padding-bottom: 9.472rem; } }
 
@@ -515,7 +524,7 @@ th {
     .section-footer {
       width: 12.751rem; }
       .section-footer p {
-        margin-top: 0.565rem; }
+        margin-top: 0.238rem; }
       [role="main"] > .section-footer {
         bottom: auto;
         top: auto; }
@@ -762,7 +771,7 @@ th {
   white-space: nowrap; }
 
 .share-buttons ul {
-  line-height: 2.124;
+  line-height: 1.618;
   padding-left: 0; }
   .share-buttons ul::before {
     color: #534a47;
@@ -777,10 +786,14 @@ th {
   background-color: #5bacd0;
   border-radius: 51%;
   display: block;
-  height: 2.124rem;
-  width: 2.124rem; }
+  height: 1.618rem;
+  width: 1.618rem; }
   .share-buttons a::before {
     background-size: auto 61.804%; }
+  @media (min-width: 53.487rem) {
+    .share-buttons a {
+      height: 2.124rem;
+      width: 2.124rem; } }
 .share-buttons .twitter-tweet a::before {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M448%20136.906c-14.128%206.267-29.313%2010.5-45.247%2012.405%2016.263-9.748%2028.756-25.187%2034.64-43.585-15.225%209.03-32.084%2015.585-50.03%2019.118-14.37-15.312-34.845-24.878-57.505-24.878-43.507%200-78.783%2035.273-78.783%2078.78%200%206.175.697%2012.188%202.04%2017.954-65.475-3.286-123.526-34.65-162.382-82.315-6.782%2011.635-10.667%2025.17-10.667%2039.607%200%2027.333%2013.908%2051.447%2035.05%2065.574-12.916-.41-25.064-3.953-35.685-9.853-.006.328-.006.656-.006.99%200%2038.17%2027.156%2070.01%2063.196%2077.25-6.61%201.8-13.57%202.764-20.755%202.764-5.077%200-10.012-.495-14.823-1.414%2010.025%2031.298%2039.12%2054.077%2073.594%2054.71-26.962%2021.132-60.93%2033.726-97.842%2033.726-6.36%200-12.63-.375-18.794-1.102%2034.865%2022.352%2076.276%2035.397%20120.766%2035.397%20144.908%200%20224.152-120.046%20224.152-224.155%200-3.415-.078-6.812-.23-10.19%2015.395-11.11%2028.75-24.984%2039.312-40.784%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E"); }
 .share-buttons .facebook-share a::before {
@@ -800,7 +813,7 @@ th {
     padding-right: 0.809rem; } }
 
 .adsbygoogle {
-  margin-top: 1.618rem;
+  margin-top: 2.618rem;
   max-width: 336px; }
 
 img[src$='.svg'], img[src$='.svgz'] {
